<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Order_Menu">

    <TextView
        android:id="@+id/text_tanggal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="40dp"
        android:text="@string/tanggal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_jam"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/jam"
        app:layout_constraintBaseline_toBaselineOf="@+id/text_tanggal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/text_tanggal" />

    <TextView
        android:id="@+id/text_namaMenu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/nama_menu"
        app:layout_constraintStart_toStartOf="@+id/text_tanggal"
        app:layout_constraintTop_toBottomOf="@+id/text_tanggal" />

    <EditText
        android:id="@+id/et_jumlahOrder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:ems="10"
        android:hint="@string/enter_jumlah_order"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_namaMenu" />

    <TextView
        android:id="@+id/text_hargaV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/harga"
        app:layout_constraintBaseline_toBaselineOf="@+id/text_namaMenu"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/text_namaMenu" />

    <Button
        android:id="@+id/btn_saveOrder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:text="@string/save_order"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_jumlahOrder" />

    <Button
        android:id="@+id/btn_orderLagi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:text="@string/order_lagi"
        app:layout_constraintEnd_toEndOf="@+id/btn_saveOrder"
        app:layout_constraintStart_toStartOf="@+id/btn_saveOrder"
        app:layout_constraintTop_toBottomOf="@+id/btn_saveOrder" />
</androidx.constraintlayout.widget.ConstraintLayout>